--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,5 +26,79 @@ jobs:
     - name: Build the Docker image
       run: docker build --build-arg FOLIA_VERSION=${{ env.VERSION }} -t endkind/folia:${{ env.VERSION }} .
 
+    - name: Save Docker image for test job
+      run: docker save endkind/folia:${{ env.VERSION }} > image.tar
+
+    - name: Upload image artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: docker-image
+        path: image.tar
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Download image artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: docker-image
+
+    - name: Load Docker image
+      run: docker load < image.tar
+
+    - name: Test the Docker image
+      run: |
+        # Start the container
+        CONTAINER_ID=$(docker run -it -d -p 25565:25565 -e MINECRAFT_EULA=true endkind/folia:${{ env.VERSION }})
+
+        # Wait for the container to initialize
+        MAX_RETRIES=60
+        RETRY_COUNT=0
+        while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+          # Check if the container is running
+          if [ "$(docker ps -q -f id=$CONTAINER_ID)" == "" ]; then
+            echo "Container failed to start."
+            exit 1
+          fi
+
+          # Check if port 25565 is open
+          PORT_STATUS=$(docker exec $CONTAINER_ID sh -c "netstat -tuln | grep 25565")
+          if [ ! -z "$PORT_STATUS" ]; then
+            echo "Port 25565 is open."
+            break
+          fi
+
+          # Increment retry count and wait
+          RETRY_COUNT=$((RETRY_COUNT + 1))
+          echo "Waiting for container to initialize... ($RETRY_COUNT/$MAX_RETRIES)"
+          sleep 5
+        done
+
+        # If the container still isn't ready, fail the job
+        if [ $RETRY_COUNT -eq $MAX_RETRIES ]; then
+          echo "Container did not initialize within the expected time."
+          docker logs $CONTAINER_ID
+          docker stop $CONTAINER_ID
+          docker rm $CONTAINER_ID
+          exit 1
+        fi
+
+        # Clean up
+        docker stop $CONTAINER_ID
+        docker rm $CONTAINER_ID
+
+  push:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+    - name: Check out the repository
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
     - name: Push the Docker image
       run: docker push endkind/folia:${{ env.VERSION }}
