--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
+
     steps:
     - name: Check out the repository
       uses: actions/checkout@v4
@@ -18,16 +21,16 @@ jobs:
       run: |
         VERSION=${GITHUB_REF##*/}
         VERSION=$(echo $VERSION | sed 's/^v//')
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "::set-output name=version::$VERSION"
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build the Docker image
-      run: docker build --build-arg FOLIA_VERSION=${{ env.VERSION }} -t endkind/folia:${{ env.VERSION }} .
+      run: docker build --build-arg FOLIA_VERSION=${{ steps.get_version.outputs.version }} -t endkind/folia:${{ steps.get_version.outputs.version }} .
 
     - name: Save Docker image for test job
-      run: docker save endkind/folia:${{ env.VERSION }} > image.tar
+      run: docker save endkind/folia:${{ steps.get_version.outputs.version }} > image.tar
 
     - name: Upload image artifact
       uses: actions/upload-artifact@v4
@@ -50,11 +53,14 @@ jobs:
 
     - name: Test the Docker image
       run: |
+        # Use the version from the build job output
+        VERSION=${{ needs.build.outputs.version }}
+
         # Start the container
-        CONTAINER_ID=$(docker run -it -d -p 25565:25565 -e MINECRAFT_EULA=true endkind/folia:${{ env.VERSION }})
+        CONTAINER_ID=$(docker run -it -d -p 25565:25565 -e MINECRAFT_EULA=true endkind/folia:$VERSION)
 
         # Wait for the container to initialize
-        MAX_RETRIES=60
+        MAX_RETRIES=30
         RETRY_COUNT=0
         while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
           # Check if the container is running
@@ -101,4 +107,4 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push the Docker image
-      run: docker push endkind/folia:${{ env.VERSION }}
+      run: docker push endkind/folia:${{ needs.build.outputs.version }}
