--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,7 +55,6 @@ jobs:
       run: |
         # Use the version from the build job output
         VERSION=${{ needs.build.outputs.version }}
-        echo $VERSION
 
         # Start the container
         CONTAINER_ID=$(docker run -it -d -p 25565:25565 -e MINECRAFT_EULA=true endkind/folia:$VERSION)
@@ -71,7 +70,7 @@ jobs:
           fi
 
           # Check if port 25565 is open
-          PORT_STATUS=$(docker exec $CONTAINER_ID sh -c "netstat -tuln | grep 25565")
+          PORT_STATUS=$(docker exec $CONTAINER_ID sh -c "ss -tuln | grep ':25565'")
           if [ ! -z "$PORT_STATUS" ]; then
             echo "Port 25565 is open."
             break
