--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -59,8 +59,8 @@ jobs:
         # Start the container
         CONTAINER_ID=$(docker run -it -d -p 25565:25565 -e MINECRAFT_EULA=true endkind/folia:$VERSION)
 
-        # Install 'ss' in the container if missing
-        docker exec $CONTAINER_ID sh -c "export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y iproute2"
+        # Install 'telnet' in the container if missing
+        docker exec $CONTAINER_ID sh -c "apt-get update && apt-get install -y telnet"
 
         # Wait for the container to initialize
         MAX_RETRIES=60
@@ -73,8 +73,8 @@ jobs:
           fi
 
           # Check if port 25565 is open
-          PORT_STATUS=$(docker exec $CONTAINER_ID sh -c "ss -tuln | grep ':25565'")
-          if [ ! -z "$PORT_STATUS" ]; then
+          TELNET_STATUS=$(echo quit | docker exec -i $CONTAINER_ID telnet localhost 25565 | grep "Connected")
+          if [ ! -z "$TELNET_STATUS" ]; then
             echo "Port 25565 is open."
             break
           fi
