--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -110,4 +110,9 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push the Docker image
-      run: docker push endkind/folia:${{ needs.build.outputs.version }}
+      run: |
+        # Use the version from the build job output
+        VERSION=${{ needs.build.outputs.version }}
+        echo $VERSION  # TEST
+
+        docker push endkind/folia:$VERSION
