--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,8 @@ jobs:
         VERSION=${GITHUB_REF##*/}
         VERSION=$(echo $VERSION | sed 's/^v//')
         echo "::set-output name=version::$VERSION"
+      outputs:
+        version: $VERSION
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
