--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         VERSION=${GITHUB_REF##*/}
         VERSION=$(echo $VERSION | sed 's/^v//')
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -49,6 +50,7 @@ jobs:
       run: |
         VERSION=${GITHUB_REF##*/}
         VERSION=$(echo $VERSION | sed 's/^v//')
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Load Docker image
       run: docker load < image.tar
@@ -110,6 +112,7 @@ jobs:
       run: |
         VERSION=${GITHUB_REF##*/}
         VERSION=$(echo $VERSION | sed 's/^v//')
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
