--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -114,6 +114,9 @@ jobs:
         VERSION=$(echo $VERSION | sed 's/^v//')
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
+    - name: Load Docker image
+      run: docker load < image.tar
+
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
