--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -101,7 +101,9 @@ jobs:
 
   push:
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - build
+      - test
 
     steps:
     - name: Check out the repository
