--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -129,3 +129,38 @@ jobs:
 
     - name: Push the Docker image
       run: docker push endkind/folia:$VERSION
+
+  issue-on-failure:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - test
+      - push
+    if: ${{ failure() }}
+
+    steps:
+    - name: Create GitHub issue
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const failedJob = context.payload.workflow_run.jobs.find(job => job.conclusion === 'failure');
+          const jobName = failedJob.name || 'Unknown Job';
+          const issueTitle = `⚠️ CI Pipeline Failure in Job: ${jobName}`;
+          const issueBody = `
+          A failure occurred in the CI pipeline.
+
+          **Job:** ${jobName}
+          **Repository:** ${context.repo.owner}/${context.repo.repo}
+          **Branch/Tag:** ${context.ref}
+          **Commit:** ${context.sha}
+          **Link to Logs:** ${context.payload.workflow_run.html_url}
+
+          Please review and address the issue.
+          `;
+          await github.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: issueTitle,
+            body: issueBody,
+          });
