--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -132,29 +132,29 @@ jobs:
 
   issue-on-failure:
     runs-on: ubuntu-latest
-    needs:
-      - build
-      - test
-      - push
     if: ${{ failure() }}
 
     steps:
-    - name: Create GitHub issue
+    - name: Create GitHub issue on failure
       uses: actions/github-script@v6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const failedJob = context.payload.workflow_run.jobs.find(job => job.conclusion === 'failure');
-          const jobName = failedJob.name || 'Unknown Job';
-          const issueTitle = `⚠️ CI Pipeline Failure in Job: ${jobName}`;
+          const failedJobs = context.workflow_run.jobs.filter(job => job.conclusion === 'failure');
+          const branchOrTag = context.ref.startsWith('refs/tags/') ? context.ref.replace('refs/tags/', 'Tag: ') : context.ref.replace('refs/heads/', 'Branch: ');
+          const commitSha = context.sha;
+          const issueTitle = `⚠️ CI Pipeline Failure`;
           const issueBody = `
-          A failure occurred in the CI pipeline.
+          **Branch/Tag:** ${branchOrTag}
+          **Commit:** ${commitSha}
+          
+          A failure occurred in the CI pipeline:
 
-          **Job:** ${jobName}
-          **Repository:** ${context.repo.owner}/${context.repo.repo}
-          **Branch/Tag:** ${context.ref}
-          **Commit:** ${context.sha}
-          **Link to Logs:** ${context.payload.workflow_run.html_url}
+          ${failedJobs.map(job => `
+          - **Job Name:** ${job.name}
+          - **Status:** ${job.conclusion}
+          - **Logs:** [View Logs](${job.html_url})
+          `).join('\n')}
 
           Please review and address the issue.
           `;
