--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -132,6 +132,10 @@ jobs:
 
   issue-on-failure:
     runs-on: ubuntu-latest
+    needs:
+      - build
+      - test
+      - push
     if: ${{ failure() }}
 
     steps:
