--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -130,41 +130,33 @@ jobs:
     - name: Push the Docker image
       run: docker push endkind/folia:$VERSION
 
-  issue-on-failure:
+  create-issue-on-failure:
     runs-on: ubuntu-latest
-    needs:
-      - build
-      - test
-      - push
-    if: ${{ failure() }}
-
+    if: failure()
     steps:
-    - name: Create GitHub issue on failure
+    - name: Create a GitHub Issue
       uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const failedJobs = context.workflow_run.jobs.filter(job => job.conclusion === 'failure');
-          const branchOrTag = context.ref.startsWith('refs/tags/') ? context.ref.replace('refs/tags/', 'Tag: ') : context.ref.replace('refs/heads/', 'Branch: ');
-          const commitSha = context.sha;
-          const issueTitle = `⚠️ CI Pipeline Failure`;
+          const { context } = require('@actions/github');
+          const issueTitle = `❌ CI/CD Pipeline Failed`;
           const issueBody = `
-          **Branch/Tag:** ${branchOrTag}
-          **Commit:** ${commitSha}
-          
-          A failure occurred in the CI pipeline:
+          The CI/CD pipeline failed for the commit: \`${context.sha}\`.
+          Please investigate the issue and resolve it.
 
-          ${failedJobs.map(job => `
-          - **Job Name:** ${job.name}
-          - **Status:** ${job.conclusion}
-          - **Logs:** [View Logs](${job.html_url})
-          `).join('\n')}
+          **Workflow:** ${context.workflow}
+          **Job:** ${context.job}
+          **Run ID:** ${context.runId}
+          **Repository:** ${context.repo.owner}/${context.repo.repo}
 
-          Please review and address the issue.
+          View the full logs [here](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}).
           `;
-          await github.issues.create({
+          
+          const { data: issue } = await github.rest.issues.create({
             owner: context.repo.owner,
             repo: context.repo.repo,
             title: issueTitle,
             body: issueBody,
           });
+
+          console.log(`Created issue #${issue.number}: ${issue.html_url}`);
