--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -132,6 +132,10 @@ jobs:
 
   create-issue-on-failure:
     runs-on: ubuntu-latest
+    needs:
+      - build
+      - test
+      - push
     if: failure()
     steps:
     - name: Create a GitHub Issue
