--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
             - MINECRAFT_EULA=true
         restart: always
         image: endkind/folia:latest
-        
+        cpus: '0.1'
+
 volumes:
     endkind-folia:
